# ros-interop-frontend

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  package-lock.json  package.js  package.json  package.xml
scripts/: interop_frontend
src/: config.js  electron.js  index.html
src/actions/: image_source.js  index.js  ros.js
src/assets/css/: main.css
src/assets/images/: ros.icns
src/components/: index.js
src/components/Canvas/: Canvas.css  Canvas.js
src/components/Notification/: Notification.css  Notification.js
src/components/Prompt/: Prompt.css  Prompt.js
src/components/Sidebar/: Sidebar.css  Sidebar.js
src/components/TargetList/: TargetList.css  TargetList.js
src/containers/App/: App.js
src/containers/Home/: Home.js
src/reducers/: home.js
src/routes/: index.js
webpack/: webpack.config.dev.js  webpack.config.prod.js
