<?xml version="1.0"?>
<package format="2">
  <name>interop_frontend</name>
  <version>0.1.0</version>
  <description>ROS interop frontend.</description>

  <maintainer email="dev@anassinator.com">Anass Al</maintainer>

  <license>MIT</license>

  <url type="website">
    https://github.com/mcgill-robotics/ros-interop-frontend
  </url>

  <author email="dev@anassinator.com">Anass Al</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodejs</depend>
  <exec_depend>rosbridge_server</exec_depend>

  <export> </export>
</package>
